--- a/package.json
+++ b/package.json
@@ -3,25 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "bot:build": "tsc -p tsconfig.json",
+    "bot:start": "ts-node scripts/run-bot.ts",
+    "bot:prod": "node dist/scripts/run-bot.js"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "@raydium-io/raydium-sdk": "^1.3.0-beta.2",
+    "@solana/spl-token": "^0.3.8",
+    "@solana/web3.js": "^1.78.0",
+    "bn.js": "^5.2.1",
+    "bs58": "^5.0.0",
+    "decimal.js": "^10.4.3",
+    "discord.js": "^14.13.0",
+    "dotenv": "^16.3.1",
+    "next": "13.5.4",
+    "node-cron": "^3.0.2",
+    "raydium-clmm-bot": "file:",
+    "react": "^18",
+    "react-dom": "^18",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bn.js": "^5.1.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "@types/node-cron": "^3.0.9",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5"
   }
 }
